fix: Use of Android default fonts
This fix removed the use of Rosario font on the Article Detail page. This
is done so the font accross the whole app is consistent.

--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -11,7 +11,7 @@
         android:background="@color/photo_placeholder">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/photo_container"
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:contentScrim="?attr/colorPrimary"
