--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -7,8 +7,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:background="@color/photo_placeholder">
+        android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -54,24 +53,22 @@
 
             <TextView
                 android:id="@+id/article_title"
-                style="?android:attr/textAppearanceLarge"
+                style="@style/TextAppearance.AppCompat.Display1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
                 android:fontFamily="sans-serif-condensed"
-                android:textColor="#fff"
-                android:textStyle="bold"
-                android:textSize="@dimen/detail_title_text_size"
                 android:lineSpacingMultiplier="0.9"
-                tools:text="Header"/>
+                tools:text="Header"
+                android:textColor="@color/primary_text_default_material_dark"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/article_byline"
-                style="?android:attr/textAppearanceSmall"
+                style="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#8fff"
-                tools:text="Subtitle"/>
+                tools:text="Subtitle"
+                android:textColor="@color/secondary_text_default_material_dark" />
         </LinearLayout>
 
     </android.support.design.widget.AppBarLayout>
@@ -92,17 +89,15 @@
 
             <TextView
                 android:id="@+id/article_body"
-                style="?android:attr/textAppearanceMedium"
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                 android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                 android:paddingTop="@dimen/detail_body_top_margin"
                 android:paddingBottom="@dimen/detail_body_bottom_margin"
-                android:textColor="@color/ltgray"
-                android:textColorLink="@color/theme_accent"
-                android:textSize="@dimen/detail_body_text_size"
-                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
+                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
+                android:textColor="@color/theme_secondary_text" />
 
         </com.example.xyzreader.ui.MaxWidthLinearLayout>
     </android.support.v4.widget.NestedScrollView>
