--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -16,10 +16,12 @@
 -->
 
 <resources>
-    <color name="photo_placeholder">#ccc</color>
-
     <color name="theme_primary">#FF5722</color>
     <color name="theme_primary_dark">#E64A19</color>
+    <color name="theme_primary_light">#FFCCBC</color>
+    <color name="theme_primary_text">#212121</color>
+    <color name="theme_secondary_text">#727272</color>
     <color name="theme_accent">#009688</color>
-    <color name="ltgray">#ffe0e0e0</color>
+    <color name="theme_divider">#B6B6B6</color>
+    <color name="theme_white">#FFFFFF</color>
 </resources>
