--- a/XYZReader/src/main/res/values-land/macro_layout.xml
+++ b/XYZReader/src/main/res/values-land/macro_layout.xml
@@ -1,5 +1,7 @@
 <resources>
     <!-- detail -->
+    <bool name="is_landscape">true</bool>
+
     <dimen name="detail_photo_height">186dp</dimen>
-    <dimen name="detail_inner_horiz_margin">112dp</dimen>
+    <dimen name="detail_inner_horiz_margin">16dp</dimen>
 </resources>
