--- a/XYZReader/src/main/res/values/macro_layout.xml
+++ b/XYZReader/src/main/res/values/macro_layout.xml
@@ -7,7 +7,9 @@
     <integer name="list_column_count">2</integer>
 
     <!-- detail -->
+    <bool name="is_landscape">false</bool>
     <bool name="detail_is_card">false</bool>
+
     <dimen name="detail_photo_height">256dp</dimen>
     <dimen name="detail_card_top_margin">@dimen/detail_photo_height</dimen>
     <dimen name="detail_inner_horiz_margin">16dp</dimen>
