--- a/XYZReader/src/main/res/values-land/macro_layout.xml
+++ b/XYZReader/src/main/res/values-land/macro_layout.xml
@@ -1,7 +1,9 @@
 <resources>
+    <!-- list -->
+    <dimen name="list_appbar_height">@dimen/wrap_content</dimen>
+
     <!-- detail -->
     <bool name="is_landscape">true</bool>
-
     <dimen name="detail_photo_height">186dp</dimen>
     <dimen name="detail_inner_horiz_margin">16dp</dimen>
 </resources>
