--- a/XYZReader/src/main/res/values-sw600dp-land/macro_layout.xml
+++ b/XYZReader/src/main/res/values-sw600dp-land/macro_layout.xml
@@ -1,7 +1,9 @@
 <resources>
+    <!-- list -->
+    <dimen name="list_appbar_height">112dp</dimen>
+
     <!-- detail -->
     <bool name="detail_is_card">true</bool>
-
     <dimen name="detail_photo_height">600dp</dimen>
     <dimen name="detail_card_top_margin">256dp</dimen>
 </resources>
