--- a/XYZReader/src/main/res/values/macro_layout.xml
+++ b/XYZReader/src/main/res/values/macro_layout.xml
@@ -4,6 +4,7 @@
     <dimen name="list_top_margin">8dp</dimen>
     <dimen name="list_bottom_margin">48dp</dimen>
     <dimen name="list_toolbar_side_margin">0dp</dimen>
+    <dimen name="list_appbar_height">@dimen/wrap_content</dimen>
     <integer name="list_column_count">2</integer>
 
     <!-- detail -->
